--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,8 @@
 spring:
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
   jackson:
     deserialization:
       fail-on-unknown-properties : true
@@ -18,6 +22,7 @@ spring:
     password: dmswl0818
     url: jdbc:mysql://localhost:3306/employee_search_system?serverTimezone=Asia/Seo?ul
     driver-class-name: com.mysql.cj.jdbc.Driver
+
 
 
 my-db:
